--- a/navtopmenu.html
+++ b/navtopmenu.html
@@ -1,3 +1,12 @@
+<!--
+
+░█▀▀█ ░░ ▒█▀▀█ █▀▀█ █▀▀█ █▀▀█ █▀▀ █▀▀█ █░░█ █▀▀█ █▀▀█ █░░█ 
+▒█▄▄█ ▀▀ ▒█▄▄█ █▄▄█ █░░█ █▄▄█ ▀▀█ █░░█ █▄▄█ █▄▄▀ █░░█ █░░█ 
+▒█░▒█ ░░ ▒█░░░ ▀░░▀ █▀▀▀ ▀░░▀ ▀▀▀ █▀▀▀ ▄▄▄█ ▀░▀▀ ▀▀▀▀ ░▀▀▀ 
+
+Welcome in my personal website 100% HTML Hosted by Github
+Handcrafted With ❤ By: Alexandros Papaspyrou
+Last Update: 5/10/17  -->
 
 <!DOCTYPE html> 
 <html>
@@ -16,35 +25,36 @@ body, html {
 /*    color: #777;   */
     line-height: 1.8;
 }
-.w3-wide {letter-spacing: 10px;}
+.w3-wide {letter-spacing: 8px;}
 .w3-hover-opacity {cursor: pointer;}
 
 </style>
 <!-- Navbar (sit on top) -->
 <div class="w3-top">
-	<div class="w3-bar w3-black w3-card-2 w3-opacity-min w3-hover-opacity-off" id="myNavbar">
-<a href="http://a-papaspyrou.tk" class="w3-bar-item w3-button w3-wide">
+	
+    <div class="w3-bar w3-black w3-card-2" id="myNavbar">
+<a href="https://alexandroshub.github.io/index" class="w3-bar-item w3-button w3-wide">
 <img src="https://68.media.tumblr.com/de943f2be142cd7d6709a7bfe0f8daab/tumblr_ooie0nMKfR1si59zfo1_1280.png" style="width:30px;" class="w3-circle w3-left w3-hover-opacity"> &nbsp; 
-<span class="w3-animate-opacity"><b>Papaspyrou</b><span class="w3-hide-small">Alexandros</span></span></a>
+<span class="w3-animate-opacity w3-hide-small"><b>Papaspyrou</b><span class="w3-hide-small">Alexandros</span></span></a>
 
 <!-- Right-sided navbar links -->
 <div class="w3-right w3-hide-small">
-	<a href="https://alexandroshub.github.io/projects.html" class="w3-bar-item w3-button"><i class="fa fa-send-o"></i> Creations</a>
-	<a href="https://alexandroshub.github.io/cv.html" class="w3-bar-item w3-button"><i class="fa fa-user-o"></i> Me </a> 
-	<a href="https://alexandroshub.github.io/map.html" class="w3-bar-item w3-button"><i class="fa fa-map-o"></i> Map</a>
-	<a href="https://robodayblog.wordpress.com/" target="_blank" class="w3-bar-item w3-button"><i class="fa fa-commenting-o"></i> Thoughts</a>
+	<a href="https://alexandroshub.github.io/projects.html" class="w3-bar-item w3-button"><i class="fa fa-cogs"></i> Creations</a>
+	<a href="https://alexandroshub.github.io/cv.html" class="w3-bar-item w3-button"><i class="fa fa-user-circle-o"></i> Me </a> 
+	<a href="https://alexandroshub.github.io/map.html" class="w3-bar-item w3-button"><i class="fa fa-plus-circle"></i> Plus</a>
+	<a href="https://robodayblog.wordpress.com" target="_blank" class="w3-bar-item w3-button"><i class="fa fa-bullhorn"></i> Blog</a>
 	<a href="https://m.me/papaspyrou.alexandros"  class="w3-bar-item w3-button w3-hover-blue"><i class="fa fa-comments-o"></i></a>
 </div>
 <!-- Hide right-floated links on small screens and replace them with a menu icon -->
 <a href="javascript:void(0)" class="w3-bar-item w3-button w3-right w3-hide-large w3-hide-medium" onclick="w3_open()"><i class="fa fa-bars"></i></a></div></div>
 <!-- Sidebar on small screens when clicking the menu icon -->
 <nav class="w3-sidebar w3-bar-block w3-black w3-card-2 w3-animate-left w3-hide-large w3-hide-medium" style="display:none" id="mySidebar">
-<a href="javascript:void(0)" onclick="w3_close()" class="w3-bar-item w3-button w3-large w3-padding-16 w3-hover-red" >Close ×</a> 
-	<a href="https://alexandroshub.github.io/projects.html" onclick="w3_close()" class="w3-bar-item w3-button"><i class="fa fa-send-o"></i> Creations</a>
-	<a href="https://alexandroshub.github.io/cv.html" onclick="w3_close()"  class="w3-bar-item w3-button"><i class="fa fa-user-o"></i> Me </a> 
-	<a href="https://alexandroshub.github.io/map.html" onclick="w3_close()" class="w3-bar-item w3-button"><i class="fa fa-map-o"></i> Map</a>
-	<a href="https://robodayblog.wordpress.com/" onclick="w3_close()" class="w3-bar-item w3-button"><i class="fa fa-commenting-o"></i> Thoughts</a> 
-	<a href="https://m.me/papaspyrou.alexandros" onclick="w3_close()" class="w3-bar-item w3-button w3-hover-blue"><i class="fa fa-comments-o"></i> Messenger</a>
+<a href="javascript:void(0)" onclick="w3_close()" class="w3-bar-item w3-button w3-large w3-padding-16 w3-hover-red" >Close &nbsp; ×</a> 
+	<a href="https://alexandroshub.github.io/projects.html" onclick="w3_close()" class="w3-bar-item w3-button"><i class="fa fa-cogs"></i>&nbsp; Creations</a>
+	<a href="https://alexandroshub.github.io/cv.html" onclick="w3_close()"  class="w3-bar-item w3-button"><i class="fa fa-user-circle-o"></i>&nbsp; Me </a> 
+	<a href="https://alexandroshub.github.io/map.html" onclick="w3_close()" class="w3-bar-item w3-button"><i class="fa fa-plus-circle"></i>&nbsp; Plus</a>
+	<a href="https://robodayblog.wordpress.com/" onclick="w3_close()" class="w3-bar-item w3-button"><i class="fa fa-bullhorn"></i>&nbsp; Blog</a> 
+	<a href="https://m.me/papaspyrou.alexandros" onclick="w3_close()" class="w3-bar-item w3-button w3-hover-blue"><i class="fa fa-comments-o"></i>&nbsp; Messenger</a>
 <hr><!-- social left -->
     &nbsp; <a href="https://getpocket.com/@27bdfp78TaK97g4e6dA987eA2dgaT938154I38G999WdrUw2a6c6ei72S21olQ68">
     <i class="fa fa-get-pocket w3-hover-opacity" style="font-size:14px;color:white"></i></a> &nbsp; | 
@@ -54,25 +64,20 @@ body, html {
     <i class="fa fa-twitter w3-hover-opacity" style="font-size:14px;color:white"></i></a>
     	&nbsp; <a href="https://gr.linkedin.com/in/alexandrospapaspyrou">
     <i class="fa fa-linkedin w3-hover-opacity" style="font-size:14px;color:white"></i></a>
-  	&nbsp; <a href=" https://www.reddit.com/user/alexispapy">
-    <i class="fa fa-reddit-alien w3-hover-opacity" style="font-size:14px;color:white"></i></a>
 </nav>
 
 <script>// Script to open and close sidebar
 function w3_open() {
   document.getElementById("mySidebar").style.display = "block";
-  document.getElementById("myOverlay").style.display = "block";
-}
-function w3_close() {  document.getElementById("mySidebar").style.display = "none";  document.getElementById("myOverlay").style.display = "none"
-}
+  document.getElementById("myOverlay").style.display = "block";}
+function w3_close() {  document.getElementById("mySidebar").style.display = "none";  document.getElementById("myOverlay").style.display = "none"}
 // Used to toggle the menu on small screens when clicking on the menu button
 function toggleFunction() {
     var x = document.getElementById("navDemo");
-    if (x.className.indexOf("w3-show") == -1) {
-        x.className += " w3-show";
-    } else {
-        x.className = x.className.replace(" w3-show", "");
-    }
+    if (x.className.indexOf("w3-show") == -1) 
+    { x.className += " w3-show"; } 
+    else 
+	{ x.className = x.className.replace(" w3-show", "");  }
 }
 </script>
 </html>
