--- a/links.html
+++ b/links.html
@@ -1,9 +1,9 @@
-<!-- 4/2/18
+
+<!-- 26/2/2018
 
 ░█▀▀█ ░░ ▒█▀▀█ █▀▀█ █▀▀█ █▀▀█ █▀▀ █▀▀█ █░░█ █▀▀█ █▀▀█ █░░█ 
 ▒█▄▄█ ▀▀ ▒█▄▄█ █▄▄█ █░░█ █▄▄█ ▀▀█ █░░█ █▄▄█ █▄▄▀ █░░█ █░░█ 
 ▒█░▒█ ░░ ▒█░░░ ▀░░▀ █▀▀▀ ▀░░▀ ▀▀▀ █▀▀▀ ▄▄▄█ ▀░▀▀ ▀▀▀▀ ░▀▀▀ 
-
 Welcome in my personal website 100% HTML Hosted by Github
 Handcrafted With ❤ By: Alexandros Papaspyrou
 -->
@@ -11,41 +11,93 @@ Handcrafted With ❤ By: Alexandros Papaspyrou
 <html>
 <title>Papaspyrou</title>
 <link rel="icon" href="https://78.media.tumblr.com/1a28f3759c3dcb54570d754893844188/tumblr_p2qvm8VJG21si59zfo1_400.png" type="image/png">
+<head>
 <meta charset="UTF-8">
+
 <meta name="viewport" content="width=device-width, initial-scale=1">
-<link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
-<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Raleway">
 <style>
-body,h1,h5 {font-family: "Raleway", sans-serif}
-body, html {height: 100%}
-.bgimg {
-    background-image: url('https://78.media.tumblr.com/6f0c0b35f9f3da8183855ac1be8abb8f/tumblr_oz7c9bifSb1si59zfo1_1280.jpg');
-    min-height: 100%;
-    background-position: center;
-    background-size: cover;
+* {
+    box-sizing: border-box;
+}
+
+body {
+    background-color: #f1f1f1;
+    padding: 20px;
+    font-family: Arial;
+}
+
+/* Center website */
+.main {
+    max-width: 1000px;
+    margin: auto;
+}
+
+h1 {
+    font-size: 50px;
+    word-break: break-all;
+}
+
+.row {
+    margin: 10px -16px;
+}
+
+/* Add padding BETWEEN each column */
+.row,
+.row > .column {
+    padding: 8px;
+}
+
+/* Create three equal columns that floats next to each other */
+.column {
+    float: left;
+    width: 33.33%;
+    display: none; /* Hide all elements by default */
+}
+
+/* Clear floats after rows */ 
+.row:after {
+    content: "";
+    display: table;
+    clear: both;
+}
+
+/* Content */
+.content {
+    background-color: white;
+    padding: 10px;
+}
+
+/* The "show" class is added to the filtered elements */
+.show {
+  display: block;
+}
+
+/* Style the buttons */
+.btn {
+  border: none;
+  outline: none;
+  padding: 12px 16px;
+  background-color: white;
+  cursor: pointer;
+}
+
+.btn:hover {
+  background-color: #ddd;
+}
+
+.btn.active {
+  background-color: #666;
+  color: white;
 }
 </style>
+</head>
 <body>
 
-<div class="bgimg w3-display-container w3-text-white">
-  <div class="w3-display-middle w3-jumbo">
-    <p>λινκς</p>
-  </div>
-  <div class="w3-display-topleft w3-container w3-xlarge">
-  <p><button onclick="document.getElementById('links').style.display='block'" class="w3-button w3-black">Links</button></p>
-  </div>
-  <div class="w3-display-bottomleft w3-container">
-    <p class="w3-large">Links are essential to freedom of expression online, and experts warn that censoring links will break the Web as we know it.</p>
-  </div>
-</div>
+<div class="main">
 
-<div id="links" class="w3-modal">
-  <div class="w3-modal-content w3-animate-zoom">
-    <div class="w3-container w3-black">
-      <span onclick="document.getElementById('links').style.display='none'" class="w3-button w3-display-topright w3-large">x</span>
-      <h1>Links</h1>
-    </div>
-    <div class="w3-container">
+<a href="https://alexandroshub.github.io/index"><img src="https://78.media.tumblr.com/1a28f3759c3dcb54570d754893844188/tumblr_p2qvm8VJG21si59zfo1_400.png" style="width:40px;"></a>
+<hr>
+<h2>Links</h2>
  <!--  ================================================================  -->
 <font size=2.5><b>EVENTS</b></font><br>  
         <a href="http://www.mec.gr/events">mec</a> | 
@@ -215,9 +267,6 @@ body, html {height: 100%}
     	<a href="http://www.ardumotive.com/">ardumotive</a>| 
     	<a href="https://www.youtube.com/channel/UCboteGFyO5fTflI00DikhmA">@ria3w</a>|
 <!-- =============================================== -->   
-    </div>
-  </div>
 </div>
-
 </body>
 </html>
