--- a/index.html
+++ b/index.html
@@ -1,9 +1,10 @@
+
 <!--
 ░█▀▀█ ░░ ▒█▀▀█ █▀▀█ █▀▀█ █▀▀█ █▀▀ █▀▀█ █░░█ █▀▀█ █▀▀█ █░░█ 
 ▒█▄▄█ ▀▀ ▒█▄▄█ █▄▄█ █░░█ █▄▄█ ▀▀█ █░░█ █▄▄█ █▄▄▀ █░░█ █░░█ 
 ▒█░▒█ ░░ ▒█░░░ ▀░░▀ █▀▀▀ ▀░░▀ ▀▀▀ █▀▀▀ ▄▄▄█ ▀░▀▀ ▀▀▀▀ ░▀▀▀ 
 Welcome in my personal website 100% HTML Hosted by Github
-Handcrafted With ❤ (CC)-By: Alexandros Papaspyrou V.3.4.20
+Handcrafted With ❤ (CC)-By: Alexandros Papaspyrou V.11.4.20
 <!--
 CC-BY:		Alexandros S. Papaspyrou
 URL:		https://alexandroshub.github.io
@@ -11,7 +12,6 @@ Contact: 	a-papaspyrou@outlook.com.gr
 Mob: 		00306940548867
 Support: 	alexispapy@gmail.com   |   alexispapy@outlook.com   |   papaspyrou.alexandros@gmail.com
 -->
-
 <!DOCTYPE html>
 <html>
 <title>Papaspyrou | Home</title>
@@ -59,11 +59,10 @@ body, html { height: 100%; line-height: 1.8;}
 <a href="https://snappy.appypie.com/index/app-download/appId/9a986a9e031f">
 <img src="https://d2wuvg8krwnvon.cloudfront.net/appqrcode/mobile_9a986a9e031f.png" width="50%" height="50%"></a><p>or click anywhere to close this window</p> </center></div></div> <script>function on() {document.getElementById("overlay").style.display = "block";} function off() {document.getElementById("overlay").style.display = "none";}</script>
 <!--  ////////////////////////// QR  ////////////////////////// -->
+
 <!-- //////////////////////////Top menu////////////////////////// -->
 <div class="w3-top"><div id="myNavbar" style="max-width:100%;margin:auto;">
 <!-- menu --><div class="w3-button w3-padding-16 w3-left w3-hover-black" onclick="w3_open()"><b><font color="orange"><i class="fa fa-bars"></i></font></b></div>
-
-<a href="https://alexandroshub.github.io/quarantine.html" class="w3-button w3-padding-16 w3-hide-small w3-right w3-hover-black"><b><font color="red">Quarantine</font></b></a>
 <!-- contact --><a href="https://alexandroshub.github.io/contact.html" class="w3-button w3-padding-16 w3-hide-small w3-right w3-hover-black"><b><font color="orange"><i class="fa fa-envelope"></i></font></b></a>
 <!-- me --><a href="https://alexandroshub.github.io/cv.html" class="w3-button w3-padding-16 w3-hide-small w3-right w3-hover-black"><b><font color="orange"><i class="fa fa-user"></i></font></b></a>
 <!-- files --><a href="https://alexandroshub.github.io/portfolio.html" class="w3-button w3-padding-16 w3-hide-small w3-right w3-hover-black"><b><font color="orange"><i class="fa fa-th"></i></font></b></a>
@@ -81,13 +80,7 @@ body, html { height: 100%; line-height: 1.8;}
 	<a href="https://alexandroshub.github.io/plus" onclick="w3_close()" class="w3-bar-item w3-button w3-hover-orange"><i class="	fa fa-plus-circle"></i>  &nbsp; Plus</a> 
     <a href="https://alexandroshub.github.io/contact.html" onclick="w3_close()" class="w3-bar-item w3-button w3-hover-orange"><i class="fa fa-envelope-o"></i>  &nbsp; Contact</a> 
 </nav>
-<!-- Header with full-height image -->
-<header class="bgimg-1 w3-display-container w3-grayscale-min" id="home">
-  <div class="w3-display-left w3-text-white" style="padding:48px">
-    <span class="w3-jumbo w3-hide-small">Welcome</span><br>
-    <span class="w3-xxlarge w3-hide-large w3-hide-medium">Welcome</span><br>
-<body onload="typeWriter()">
-<p id="demo" class="w3-large"></p>
+
 <!-- scripts --><script>
 // Change style of navbar on scroll
 window.onscroll = function() {myFunction()};
@@ -96,16 +89,20 @@ function myFunction() {var navbar = document.getElementById("myNavbar"); if (doc
 function toggleFunction() { var x = document.getElementById("navDemo");  if (x.className.indexOf("w3-show") == -1) { x.className += " w3-show"; } else { x.className = x.className.replace(" w3-show", ""); }}
 </script>
 <!-- //////////////////////////END of Top menu////////////////////////// -->
+<!-- Header with full-height image -->
+<header class="bgimg-1 w3-display-container w3-grayscale-min" id="home">
+  <div class="w3-display-left w3-text-white" style="padding:48px">
+    <span class="w3-jumbo w3-hide-small">Welcome</span><br>
+    <span class="w3-xxlarge w3-hide-large w3-hide-medium">Welcome</span><br>
+<body onload="typeWriter()">
+<p id="demo" class="w3-large"></p>
 </body>
 <span class="w3-large w3-hide-small" style="background-color: #0033669C; color: orange; display: inline-block; padding: 3px 10px; font-weight: bold; border-radius: 5px;">Ζούμε σε μια κοινωνία απολύτως εξαρτώμενη από την επιστήμη και την τεχνολογία,<br> όπου σχεδόν κανένας δεν ξέρει τίποτα για την επιστήμη και την τεχνολογία.</span>
     <p><a href="https://alexandroshub.github.io/liveplus.html" class="w3-button w3-black w3-padding-large w3-large w3-margin-top w3-opacity w3-hover-opacity-off w3-hover-black"><b> TECH <font color="orange"><i class="fa fa-plus"></i> PLUS</font></b></a>
-        <a href="https://alexandroshub.github.io/covid19.html" class="w3-button w3-black w3-padding-large w3-large w3-margin-top w3-opacity w3-hover-opacity-off w3-hover-black"><b> corona<font color="green">virus</font></b></a>
     </p>
     </div> 
-  
  <span class="w3-hide-small">  
   <div class="w3-display-bottomleft w3-text-grey w3-large" style="padding:24px 48px">
- 
 <!-- Dashboard --><a href=" https://alexandroshub.github.io/vip.dashboard.html " title="Dashboard"><i class="fa fa-pencil-square-o"></i></a>
 <!-- android --><a style="text-decoration: none" onclick="on()"title="APP"><i class="fa fa-android"></i></a> 
 <!-- About --><a href=" https://alexandroshub.github.io/about " title="About"><i class="fa fa-info-circle"></i></a> | 
@@ -124,7 +121,6 @@ function toggleFunction() { var x = document.getElementById("navDemo");  if (x.c
         |          |   /                                                         
 -->
 <div class="w3-center w3-padding-32 w3-black"><span class="w3-xlarge w3-border-dark-grey w3-padding-16"><i class="fa fa-quote-left"style="font-size:12px;color:orange"></i> Άν κάναμε όλα όσα είμαστε ικανοί να κάνουμε, θα εκπλήσσαμε τον εαυτό μας.<i class="fa fa-quote-right"style="font-size:12px;color:orange"></i></span><br>Thomas Edison</div>
-
 <!-- Promo -->
 <div class="w3-container w3-light-grey" style="padding:45px 16px"  id="port">
   <div class="w3-row-padding"><br>
@@ -162,16 +158,22 @@ function toggleFunction() { var x = document.getElementById("navDemo");  if (x.c
    .-.     .-.     .-.     .-.     .-.     .-.     .-.     .-.     .-. 
  .'   `._.'   `._.'   `._.'   `._.'   `._.'   `._.'   `._.'   `._.'   `.
 -->
- 
-<!-- ////////// Footer 2020 ////////// --> 
-<footer class="w3-center w3-black ">
-<a href="#home" class="w3-button w3-hover-orange"><i class="fa fa-chevron-circle-up w3-margin-right"></i>Επιστροφή στην κορυφή</a>
-<!-- top -->
- <div class="w3-center w3-padding-32"><span class="w3-large w3-bottombar w3-border-orange w3-padding-16">Thanks For Sharing</span></div>
-<!-- Go to www.addthis.com/dashboard to customize your tools -->
 
+<!-- ////////// Footer 2020 ////////// -->
+<style>footer {background-color: #19273C; color: #4B759B; padding: 10px;}</style>
+<footer class="w3-center">
+<div class="w3-row">
+  <div class="w3-container w3-half">
+      <div class="w3-center w3-padding-32"><span class="w3-large w3-bottombar w3-border-orange w3-padding-16">You've reached the end!</span></div>
+      <a href="#home" class="w3-button w3-hover-orange"><i class="fa fa-chevron-circle-up w3-margin-right"></i>Επιστροφή στην κορυφή</a>
+  </div>
+  <div class="w3-container w3-half">
+   		<div class="w3-center w3-padding-32"><span class="w3-large w3-bottombar w3-border-orange w3-padding-16">Thanks For Sharing!</span></div>
+<!-- Go to www.addthis.com/dashboard to customize your tools -->
 <div class="addthis_inline_share_toolbox"></div>
-<!-- Signature --><img src= "https://78.media.tumblr.com/e3d4fac4931e6e1df6b3b85d53dae92b/tumblr_p0sxo3UYRB1si59zfo1_1280.png" style="width:330px;" alt="Signature" align="bottom">
+  </div>
+</div>
+<!-- Signature --><img src= "https://78.media.tumblr.com/e3d4fac4931e6e1df6b3b85d53dae92b/tumblr_p0sxo3UYRB1si59zfo1_1280.png" style="width:340px;" alt="Signature" align="bottom">
   <style>div.a {font-size: 12px;}</style>
 <div class="a">
 <p><link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css" rel="stylesheet" integrity="sha256-3dkvEK0WLHRJ7/Csr0BZjAWxERc5WH7bdeUya2aXxdU= sha512-+L4yy6FRcDGbXJ9mPG8MT/3UCDzwR9gPeyFNMCtInsol++5m3bk2bXWKdZjvybmohrAsn3Ua5x8gfLnbE1YkOg==" crossorigin="anonymous">
