--- a/newtry.html
+++ b/newtry.html
@@ -29,7 +29,7 @@ body, html { height: 100%; line-height: 1.8;}
 .bgimg-1 {
     background-position: center; background-size: cover;
     background-image: url("https://images.wallpaperscraft.com/image/corridor_dark_station_152846_1600x1200.jpg");
-    min-height: 100%;
+    min-height: 90%;
 }
 .w3-bar .w3-button { padding: 16px;}
 </style>
@@ -61,10 +61,7 @@ body, html { height: 100%; line-height: 1.8;}
 <!--  ////////////////////////// QR  ////////////////////////// -->
 
 <!-- //////////////////////////Top menu////////////////////////// -->
-
 <style>
-
-
 .topnav {overflow: hidden; background-color: #19273C;}
 .topnav a {float: left; display: block; color: #4B759B; text-align: center; padding: 14px 16px; text-decoration: none; font-size: 17px;}
 .topnav a:hover {background-color: #d9733b; color: black;}
@@ -78,7 +75,6 @@ body, html { height: 100%; line-height: 1.8;}
   .topnav.responsive .icon {position: absolute; right: 0; top: 0;}
   .topnav.responsive a {float: none; display: block; text-align: left;}}
 </style>
-
 <div class="topnav" id="myTopnav">
   <a href="#home" class="active">Alexandros Hub</a>
   <a href="https://alexandroshub.github.io/cv.html">AboutMe</a>
@@ -92,8 +88,6 @@ body, html { height: 100%; line-height: 1.8;}
 <script>
 function myFunction() {var x = document.getElementById("myTopnav"); if (x.className === "topnav") {x.className += " responsive";} else {x.className = "topnav";}}
 </script>
-
-
 <!-- //////////////////////////END of Top menu////////////////////////// -->
 <!-- Header with full-height image -->
 <header class="bgimg-1 w3-display-container w3-grayscale-min" id="home">
@@ -103,14 +97,11 @@ function myFunction() {var x = document.getElementById("myTopnav"); if (x.classN
 <body onload="typeWriter()">
 <p id="demo" class="w3-large"></p>
 </body>
-<span class="w3-large w3-hide-small" style="background-color: #0033669C; color: orange; display: inline-block; padding: 3px 10px; font-weight: bold; border-radius: 5px;">Ζούμε σε μια κοινωνία απολύτως εξαρτώμενη από την επιστήμη και την τεχνολογία,<br> όπου σχεδόν κανένας δεν ξέρει τίποτα για την επιστήμη και την τεχνολογία.</span>
-    <p><a href="https://alexandroshub.github.io/liveplus.html" class="w3-button w3-black w3-padding-large w3-large w3-margin-top w3-opacity w3-hover-opacity-off w3-hover-black"><b> TECH <font color="orange"><i class="fa fa-plus"></i> PLUS</font></b></a>
-    </p>
+<span class="w3-large" style="background-color: #0033669C; color: #72c494; display: inline-block; padding: 3px 10px; font-weight: bold; border-radius: 5px;">Ζούμε σε μια κοινωνία απολύτως εξαρτώμενη από την επιστήμη και την τεχνολογία,<br> όπου σχεδόν κανένας δεν ξέρει τίποτα για την επιστήμη και την τεχνολογία.</span>
+ <!--   <p><a href="https://alexandroshub.github.io/liveplus.html" class="w3-button w3-black w3-padding-large w3-large w3-margin-top w3-opacity w3-hover-opacity-off w3-hover-black"><b> TECH <font color="orange"><i class="fa fa-plus"></i> PLUS</font></b></a></p> -->
     </div> 
  <span class="w3-hide-small">  
   <div class="w3-display-bottomleft w3-text-grey w3-large" style="padding:24px 48px">
-<!-- Dashboard --><a href=" https://alexandroshub.github.io/vip.dashboard.html " title="Dashboard"><i class="fa fa-pencil-square-o"></i></a>
-<!-- android --><a style="text-decoration: none" onclick="on()"title="APP"><i class="fa fa-android"></i></a> 
 </div></span>
 </header>
 <!--
@@ -126,62 +117,51 @@ function myFunction() {var x = document.getElementById("myTopnav"); if (x.classN
      <center>
       <div class="w3-third">
    <h3>Plus</h3>
-   <a href="https://alexandroshub.github.io/liveplus.html" class="w3-button w3-black"> <i class="fa fa-plus"></i></a>
+   <a href="https://alexandroshub.github.io/liveplus.html" class="w3-button" style="background-color: #4B759B"> <i class="fa fa-plus"></i></a>
 <div class="w3-row " style="padding-bottom:16px">
 <p>Η αγαπημένη μου ενότητα! podcasting, blogging, videos, links  και ότι άλλο μπορεί να προκύψει.</p>
-    
 </div>
     </div>
       <div class="w3-third">
    <h3>Portfolio</h3>
 <div class="w3-row " style="padding-bottom:16px">
-<a href="https://alexandroshub.github.io/portfolio.html"  class="w3-button w3-black">
- <i class="fa fa-code"></i>
+<a href="https://alexandroshub.github.io/portfolio.html"  class="w3-button" style="background-color: #4B759B">
+<b><i class="fa fa-code"></i></b>
  </a> <p>Δες εργασίες κατασκευές κώδικες και μελέτες,
  όπως και άλλα θέματα  με τα οποία έχω ασχοληθεί.
- </p>
-      
+ </p>      
     </div></div>
     <div class="w3-third">
-   <h3> About Me.</h3>
-   <a href="https://alexandroshub.github.io/cv.html" class="w3-button w3-black">  <i class="fa fa-user-o"></i></a>
-  
+   <h3> About Me</h3>
+   <a href="https://alexandroshub.github.io/cv.html" class="w3-button" style="background-color: #4B759B"><b><i class="fa fa-user-o"></i></b></a>
 <div class="w3-row " style="padding-bottom:16px">
 <p> Δες το βιογραφικό μου  το background τα  hobby μου και άλλα σχετικά με εμένα.</p>
-    <p> </p>
+	</div>
 </div>
-    </div>
- </center>  </div></div>
-
+</center></div></div>
 <!-- 
    .-.     .-.     .-.     .-.     .-.     .-.     .-.     .-.     .-. 
  .'   `._.'   `._.'   `._.'   `._.'   `._.'   `._.'   `._.'   `._.'   `.
--->
-
-<!-- ////////// Footer 2020 ////////// -->
+--><!-- //////////// Footer 2020 ////////////  Footer 2020 ////////////  -->
 <style>footer {background-color: #19273C; color: #4B759B; padding: 10px;}</style>
-<footer class="w3-center">
-<div class="w3-row">
-  <div class="w3-container w3-half">
-      <div class="w3-center w3-padding-32"><span class="w3-large w3-bottombar w3-border-orange w3-padding-16">You've reached the end!</span></div>
-      <a href="#home" class="w3-button w3-hover-orange"><i class="fa fa-chevron-circle-up w3-margin-right"></i>Επιστροφή στην κορυφή</a>
-  </div>
-  <div class="w3-container w3-half">
-   		<div class="w3-center w3-padding-32"><span class="w3-large w3-bottombar w3-border-orange w3-padding-16">Thanks For Sharing!</span></div>
+<footer class="w3-center"><div class="w3-row"><div class="w3-container w3-half">
+<div class="w3-center w3-padding-32"><span class="w3-large w3-bottombar w3-border-orange w3-padding-16">You've reached the end!</span></div>
+<a href="#home" class="w3-button w3-hover-orange"><i class="fa fa-chevron-circle-up w3-margin-right"></i>Επιστροφή στην κορυφή</a></div>
+<div class="w3-container w3-half"><div class="w3-center w3-padding-32">
+<span class="w3-large w3-bottombar w3-border-orange w3-padding-16">Thanks For Sharing!</span></div>
 <!-- Go to www.addthis.com/dashboard to customize your tools -->
-<div class="addthis_inline_share_toolbox"></div>
-  </div>
-</div>
-<!-- Signature --><img src= "https://78.media.tumblr.com/e3d4fac4931e6e1df6b3b85d53dae92b/tumblr_p0sxo3UYRB1si59zfo1_1280.png" style="width:340px;" alt="Signature" align="bottom">
+<div class="addthis_inline_share_toolbox"></div></div></div>
+<!-- Signature --><img src= "https://78.media.tumblr.com/e3d4fac4931e6e1df6b3b85d53dae92b/tumblr_p0sxo3UYRB1si59zfo1_1280.png" style="width:340px;" alt="Papaspyrou Alexandros" align="bottom">
   <style>div.a {font-size: 12px;}</style>
 <div class="a">
 <p><link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css" rel="stylesheet" integrity="sha256-3dkvEK0WLHRJ7/Csr0BZjAWxERc5WH7bdeUya2aXxdU= sha512-+L4yy6FRcDGbXJ9mPG8MT/3UCDzwR9gPeyFNMCtInsol++5m3bk2bXWKdZjvybmohrAsn3Ua5x8gfLnbE1YkOg==" crossorigin="anonymous">
 <i class="fa fa-creative-commons"></i>
-2020 AlexandrosHub CC-BY | <a href="https://alexandroshub.github.io/about">Privacy Statement & Terms of Use</a> | <a href="https://alexandroshub.github.io/contact">Contact</a> </p></div>
-</footer>
-<!-- ////////// End Footer 2020 ////////// -->
-
-
+2020 AlexandrosHub CC-BY | <a href="https://alexandroshub.github.io/about">Privacy Statement & Terms of Use</a> | <a href="https://alexandroshub.github.io/contact">Contact</a> | <a href="https://alexandroshub.github.io/tss">TSS</a> |  <!-- android --><a style="text-decoration: none" onclick="on()"title="APP"><i class="fa fa-android"></i></a> 
+</p></div></footer>
+<!-- //////////// Footer 2020 ////////////  Footer 2020 ////////////  --><!-- 
+   .-.     .-.     .-.     .-.     .-.     .-.     .-.     .-.     .-. 
+ .'   `._.'   `._.'   `._.'   `._.'   `._.'   `._.'   `._.'   `._.'   `.
+-->
 <script>// Modal Image Gallery
 function onClick(element) {
   document.getElementById("img01").src = element.src;
@@ -202,8 +182,7 @@ function w3_close() { mySidebar.style.display = "none";}
 <script async src="https://www.googletagmanager.com/gtag/js?id=UA-128580719-1"></script>
 <script> window.dataLayer = window.dataLayer || []; function gtag(){dataLayer.push(arguments);} gtag('js', new Date()); gtag('config', 'UA-128580719-1'); </script>
 
-</body>
-</html>
+</body></html>
 <!--  
 ╔═╗╦ ╦╔╦╗╦ ╦╦═╗╔═╗
 ╠╣ ║ ║ ║ ║ ║╠╦╝║╣ 
